- backend: fix SonarLint issues